Update /search EP
